deteccion de imagenes con IA totalmente implementado
