# src/api/routes/bike-detection.routes.js
@@ -6,11 +6,12 @@
 
 import { Router } from 'express';
 import { detectBikeInImage, uploadImage, handleMulterError } from '#controllers/bike-detection.controller.js';
+import { requireApiKey } from '#middlewares/auth.middleware.js';
 
 const router = Router();
 
 // POST /api/bikes
 // Recibe imagen multipart/form-data con key "image"
-router.post('/bikes', uploadImage, handleMulterError, detectBikeInImage);
+router.post('/bikes', requireApiKey, uploadImage, handleMulterError, detectBikeInImage);
 
 export default router;
